# hhru

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md
examples/: async_mean_salary.py  mean_salary.py  query_researcher.py  search_vacancies.py
hhru/: __init__.py  __version__.py  api.py  auth.py  client.py  consts.py  response.py
hhru/auth/: __init__.py  type.py
hhru/auth/providers/: __init__.py  _direct_auth.py  abstract.py  anonymous.py
hhru/backend/: __init__.py  protocol.py
hhru/backend/abstract/: __init__.py  abstract.py
hhru/backend/api/: __init__.py  consts.py  http_response.py  provider.py
hhru/backend/web/: __init__.py  consts.py  provider.py
hhru/dto/: __init__.py  vacancy.py
search/: search_index.json
