[tool.poetry]
name = "hhru"
version = "0.0.1"
description = "HH.ru API library for Python."
authors = ["Kirill Zhosul"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
