[tool.poetry]
name = "hhru"
version = "0.1.1"
description = "HH.ru wrapper library (jobs searching)"
license = "MIT"
readme = "README.md"
authors = ["Kirill Zhosul <kirillzhosul@yandex.com>"]
packages = [{ include = "hhru" }]
keywords = ["hhru", "hh.ru", "hh api", "headhunter", "jobs", "wrapper", "api"]
urls = { "Documentation" = "https://github.com/kirillzhosul/hhru", "Source" = "https://github.com/kirillzhosul/hhru" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
